# eedom

./: .dockerignore  .eagle-eyed-dom.yaml  .eedomignore  .gitignore  .trivyignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  DOGFOOD-FINDINGS.md  Dockerfile  Dockerfile.dogfood  Dockerfile.test  LICENSE  Makefile  README.md  TASKS.md  WHY.md  action.yml  docker-compose.yml  pyproject.toml
.eedom/: gitleaks.toml
.github/: actions-allowlist.yml  copilot-instructions.md  copilot-review-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/agents/: release-manager.agent.md
.github/instructions/: eedom-review.instructions.md  python.instructions.md
.github/workflows/: auto-add-to-project.yml  auto-done.yml  build-container.yml  copilot-review.yml  dogfood.yml  gatekeeper.yml  release-candidate.yml  release-please.yml  workflow-policy.yml
claude-artifacts/: plan-final.md  plan-phase-c-tests-risks-verification.md
config/: scan-exclusions.toml
docs/: CAPABILITIES.md  architecture-cloud.md  architecture-enterprise.md  architecture-plan-v1.md  architecture-plan-v2.md  elevator-pitch.md
docs/adr/: 001-agent-module-as-separate-entry-point.md  005-github-actions-update-vetting-policy.md
docs/plugins/: quality.md  security.md
docs/solutions/integration-issues/: mock-masked-integration-wiring-failures.md  review-loop-resolution-pass1-to-pass2.md
policies/: INPUT_SCHEMA.md  policy.rego  policy_test.rego
policies/semgrep/: arch.yaml  banned.yaml  code-smells.local.yaml  contracts.yaml  reliability.yaml  resource-safety.yaml  security.yaml  swift-code-smells.yaml  swiftui-code-smells.yaml  testing.yaml
policies/swiftlint/: default.yml
scripts/: build-image.sh  build-push.sh  build-test.sh  build.sh  codebase-stats.py  dogfood.sh  install-hooks.sh  loc-stats.sh  scan.sh  solve-issues.py  sync_scan_exclusions.py  token-stats.py  verify-checksums.sh
src/agent/: __init__.py  main.py  tool_helpers.py  tools.py
src/cli/: main.py
src/data/: pypi.py
src/eedom/: __init__.py
src/eedom/adapters/: __init__.py  (+3 more)
tests/: conftest.py
tests/contract/: __init__.py  test_review_api_contracts.py
tests/e2e/: conftest.py  test_breakpoints.py  test_clean_repo.py  test_dependency_scanners.py  test_fail_open.py  test_full_pipeline.py  test_infra_scanners.py  test_meta_plugins.py  test_quality_scanners.py  test_security_scanners.py  test_smoke_review.py
tests/integration/: test_dockerfile.py  test_e2e.py
tests/unit/: prose_assertions.py  test_actionability.py  test_agent_main.py  test_agent_prompt.py  test_agent_tools.py  test_agent_uses_usecase.py  test_blast_radius.py  test_bootstrap.py  test_bootstrap_wiring.py  test_cdk_nag_plugin.py  test_cfn_nag_plugin.py  test_clamav_plugin.py  test_cli.py  test_cli_bootstrap.py  test_cli_uses_usecase.py  test_complexity_plugin.py  test_config.py  test_copilot_agent_profiles.py  test_cpd_runner.py  test_cspell_plugin.py  test_db.py  test_decision.py  test_dependabot_policy.py  test_deterministic_abstract_guards.py  test_deterministic_agent_block_mode_guards.py  test_deterministic_aggregation_guards.py  test_deterministic_api_version_guards.py  test_deterministic_architecture_guards.py  test_deterministic_backup_guards.py  test_deterministic_bootstrap_wiring_guards.py  test_deterministic_cache_guards.py  test_deterministic_cache_key_guards.py  test_deterministic_circuit_guards.py  test_deterministic_cli_guards.py  test_deterministic_config_guards.py  test_deterministic_cors_guards.py  test_deterministic_coverage_guards.py  test_deterministic_cycle_guards.py  test_deterministic_docker_guards.py  test_deterministic_ecosystem_guards.py  (+133 more)
(+145 files in other folders)
